data/derived/comb/progs/unify/prog4763.ml.out
Characters 87-88:
  | Sine e -> "sin(" ^ e ^ ")"
                       ^
Error: This expression has type expr but an expression was expected of type
         string
